# StarPU --- Runtime system for heterogeneous multicore architectures.
#
# Copyright (C) 2021-2022       Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
#
# StarPU is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at
# your option) any later version.
#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#
include $(top_srcdir)/starpu-notests.mk

EXTRA_DIST =			\
	tools/cproject.sh	\
	tools/install_workspace.sh \
	build.properties	\
	build.xml		\
	.classpath		\
	plugin.xml		\
	.project		\
	META-INF/MANIFEST.MF	\
	icons/fxt.png		\
	icons/svg.png		\
	icons/taskGraph.png	\
	icons/vite.png		\
	.settings/org.eclipse.jdt.core.prefs

SUBDIRS	= src
SUBDIRS += examples

